--- a/RA2211042010060.ipynb
+++ b/RA2211042010060.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVFXLjd4qZ44ez+0ksSzOt",
+      "authorship_tag": "ABX9TyNXn0cI3O2Dck7sy+srKS9g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,24 @@
       "source": [
         "print(\"hi da mamakutty\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "beAl0iPqNUEf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hey how are you\")"
+      ],
+      "metadata": {
+        "id": "JNGrMci-NUpf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
