--- a/RA2211042010060.ipynb
+++ b/RA2211042010060.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXn0cI3O2Dck7sy+srKS9g",
+      "authorship_tag": "ABX9TyO1/zygLZ3pAqSluDCY9q+U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ivk1qnwKhe8",
-        "outputId": "0feab89b-901c-47ae-8076-a2852f86f804"
+        "outputId": "e6599b8f-3608-47ea-dfa4-1bdd12791d5b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hi da mamkutty\n"
+            "hi da mamakutty\n"
           ]
         }
       ],
@@ -62,10 +62,61 @@
         "print(\"hey how are you\")"
       ],
       "metadata": {
-        "id": "JNGrMci-NUpf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JNGrMci-NUpf",
+        "outputId": "38400af5-8793-48e7-e8ea-1a6c6a9782ec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hey how are you\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SquGW6WjNy4L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This program adds two numbers\n",
+        "\n",
+        "num1 = 1.5\n",
+        "num2 = 6.3\n",
+        "\n",
+        "# Add two numbers\n",
+        "sum = num1 + num2\n",
+        "\n",
+        "# Display the sum\n",
+        "print('The sum of {0} and {1} is {2}'.format(num1, num2, sum))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hHilPY9NNzDq",
+        "outputId": "c859f447-e6f5-4772-d94c-fe6cb9fe82b9"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of 1.5 and 6.3 is 7.8\n"
+          ]
+        }
+      ]
     }
   ]
 }
