--- a/RA2211042010060.ipynb
+++ b/RA2211042010060.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1/zygLZ3pAqSluDCY9q+U",
+      "authorship_tag": "ABX9TyPrMOafnITL2hyfaqbg+Lcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "display\n"
+      ],
       "metadata": {
         "id": "SquGW6WjNy4L"
       }
@@ -89,34 +91,211 @@
     {
       "cell_type": "code",
       "source": [
-        "# This program adds two numbers\n",
-        "\n",
-        "num1 = 1.5\n",
-        "num2 = 6.3\n",
-        "\n",
-        "# Add two numbers\n",
-        "sum = num1 + num2\n",
-        "\n",
-        "# Display the sum\n",
-        "print('The sum of {0} and {1} is {2}'.format(num1, num2, sum))"
+        "a = 1\n",
+        "b = 5\n",
+        "print(a)\n",
+        "print(b)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hHilPY9NNzDq",
-        "outputId": "c859f447-e6f5-4772-d94c-fe6cb9fe82b9"
+        "outputId": "ba16e0cf-2c85-4c73-f0cb-01c4603d6154"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The sum of 1.5 and 6.3 is 7.8\n"
+            "1\n",
+            "5\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "declaring variable\n"
+      ],
+      "metadata": {
+        "id": "d9cm2W1QTZeV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 3\n",
+        "b = 4\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9qveJC2QTZoW",
+        "outputId": "fb0b4300-d506-4211-b50e-38002b7cab36"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "addition"
+      ],
+      "metadata": {
+        "id": "YYsvog4DT0MG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 5\n",
+        "b = 7\n",
+        "print(a-b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Xmj8CyGT7eg",
+        "outputId": "22912630-a5d8-4949-fb2c-63a70ef245c5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "subtraction"
+      ],
+      "metadata": {
+        "id": "33-rsQHCUFbJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 4\n",
+        "b = 4 \n",
+        "print(a*b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O4Ygx6e7UHHV",
+        "outputId": "f28afdf2-965e-472d-d5c8-24a740762447"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "multiplication "
+      ],
+      "metadata": {
+        "id": "KL3-OKfxUzXA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 6\n",
+        "b = 9\n",
+        "print(a%b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hdnmLCZ0U3WR",
+        "outputId": "0192f6b5-d4e9-4d3e-9bf6-430a4181149b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 9\n",
+        "b = 3\n",
+        "print(a/b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lHUtc0roXNKi",
+        "outputId": "3063e83d-27b8-47f6-f636-aa88a9e547a8"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "division "
+      ],
+      "metadata": {
+        "id": "nSB7ClumYCa-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 4\n",
+        "b = 7\n"
+      ],
+      "metadata": {
+        "id": "tOjYzMppYDz4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
